fixed notes overflow issue using jquery and adding bootstrap class

--- a/Edulib/Contributor/static/assets/css/style.css
+++ b/Edulib/Contributor/static/assets/css/style.css
@@ -1227,11 +1227,10 @@ h6 {
 --------------------------------------------------------------*/
 
 .notes {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
 }
-
